--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^18.0.1",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
@@ -36,7 +37,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
-    "angular-cli-ghpages": "^2.0.0-beta.2",
+    "angular-cli-ghpages": "^2.0.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
